# diplomaKiril

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
dependencies/: app_config.py
display/: main_window.py
display/origin_design/: mainWindow.ui
