[tool.poetry]
name = "komornikovdiploma"
version = "0.1.0"
description = ""
authors = ["fernandoveragul <valentingullll@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
