[tool.poetry]
name = "komornikovdiploma"
version = "0.1.0"
description = ""
authors = ["fernandoveragul <valentingullll@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
PyQt6 = "^6.4.2"
PyQt6-WebEngine = "^6.4.0"
pyinstaller = "^5.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
